# Gesture-AI-Wand

./: .gitignore  readme.md  requirements.txt  test.py  train.py  utils.py
host/: CMakeLists.txt
host/src/: main.cpp
mcu/esp8266/: readme.md
model/: model.py
tools/: collect_dataset.py  labelimu.py
tools/spelling_capture/: dataset_logic.py  file_window.py  line_chart_window.py  main_window.py  serial_window.py
utils/: check_serial_com.py  collect_dataset.py  visualize_dataset.py
